iac/ansible/roles/deploy-microservice/task/files/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: jumia-backend
  labels:
    app: backend-label
spec:
  # progressDeadlineSeconds: 3600
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 0
  #     maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: backend-label
  template:
    metadata:
      labels:
        app: backend-label
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: backend
        image: conyeoka/jumia-phone-number-validator:validator-backend-image ##variable
        ports:
        - name: tcp
          containerPort: 8080
