iac/ansible/roles/deploy-microservice/task/files/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: jumia-frontend
  labels:
    app: frontend-label
spec:
  # progressDeadlineSeconds: 3600
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 0
  #     maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: frontend-label
  template:
    metadata:
      labels:
        app: frontend-label
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: frontend
        image: conyeoka/jumia-phone-number-validator:validator-frontend-image
        ports:
        - name: tcp
          containerPort: 8081
