iac/ansible/roles/deploy-microservice/task/files/backend-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: localhost
  namespace: jumia-backend
spec:
  selector:    
    app: backend-label
  type: NodePort
  ports:  
  - name: http
    port: 8081
    targetPort: 8081
    nodePort: 30036
    protocol: TCP
