iac/ansible/roles/deploy-microservice/task/files/frontend-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: localhost
  namespace: jumia-frontend
spec:
  selector:    
    app: frontend-label
  type: NodePort
  ports:  
  - name: http
    port: 8081
    targetPort: 8081
    nodePort: 30035
    protocol: TCP
